--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -199,7 +199,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "androidx.annotation:annotation:1.1.0"
 
-    compile project(':react-native-fs')
+    implementation project(':react-native-fs')
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
