--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-sensors": "^5.4.1",
     "react-native-share": "^3.1.0",
     "react-native-snap-carousel": "^3.8.1",
     "react-native-splash-screen": "^3.2.0",
