--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-svg": "^12.0.3",
     "react-native-uuid-generator": "^6.1.1",
     "react-native-webview": "^8.1.2",
+    "react-native-wifi-reborn": "^4.1.0",
     "react-native-zip-archive": "^5.0.1",
     "reanimated-bottom-sheet": "^1.0.0-alpha.19",
     "rn-fetch-blob": "^0.12.0",
